--- a/Templates/index.html
+++ b/Templates/index.html
@@ -5,7 +5,6 @@
  <style>
 
   body{
-   background-image: url('/static/1.jpg');
    background-size: cover;
    text-align: center;
   }
@@ -27,10 +26,10 @@
  </head>
  <body>
 
- <br><br><h1> 学生管理系统 </h1>
- <br><br><a href="/add_phone">添加学生</a><br><br>
- <br><br><a href="/delete_student">删除学生 </a><br><br>
- <br><br><a href ="/phone_info">查看学生信息</a><br><br>
+ <br><br><h1> 手机管理系统 </h1>
+ <br><br><a href="/add_phone">添加手机</a><br><br>
+ <br><br><a href="/delete_student">删除手机 </a><br><br>
+ <br><br><a href ="/phone_info">查看手机信息</a><br><br>
 
  </body>
  </html>
