--- a/Templates/phone_info.html
+++ b/Templates/phone_info.html
@@ -1,57 +1,34 @@
-<!DOCTYPE html>
- <html>
- <head>
-   <title>学生信息</title>
+<table id="myTable">
+  <tr>
+    <th>名称</th>
+    <th>型号</th>
+    <th>网站</th>
+    <th>存储</th>
+  </tr>
+</table>
 
- <style>
-  body{
-   background-image: url('/static/4.jpg');
-   background-size: cover;
-   text-align: center;
-   font-weight: bold;
-   font-size: larger;
+<script>
+  let data = [phones_json];
 
+  let table = document.getElementById("myTable");
+
+  for (let i = 0; i < data.length; i++) {
+    let row = document.createElement("tr");
+    let cell1 = document.createElement("td");
+    let cell2 = document.createElement("td");
+    let cell3 = document.createElement("td");
+    let cell4 = document.createElement("td");
+
+    cell1.innerHTML = data[i].name;
+    cell2.innerHTML = data[i].alexa;
+    cell3.innerHTML = data[i].site;
+    cell4.innerHTML = data[i].a;
+
+    row.appendChild(cell1);
+    row.appendChild(cell2);
+    row.appendChild(cell3);
+    row.appendChild(cell4);
+
+    table.appendChild(row);
   }
-
-  a:link, a:visited {
-  background-color: #f44336;
-  color: white;
-  padding: 14px 25px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  }
-
-  a:hover, a:active {
-  background-color: red;
-  }
-
- </style>
-
- </head>
- <body>
- <h1 style="color: green">手机信息</h1><br>
-
- <table align="center" cellspacing = "2" cellpadding = "13" border = "10" width="700" >
-
- <thead>
- <td>品牌</td>
- <td>型号</td>
- <td>cpu型号</td>
- <td>内存大小</td>
- </thead>
- {% for row in phones %}
- <tr>
- <td>{{row["phonebrand"]}}</td>
- <td>{{row["phonetype"]}}</td>
- <td>{{row["cpuinfo"]}}</td>
- <td>{{row["ramandrominfo"]}}</td>
-
- </tr>
- {% endfor %}   
- </table>
- <br><br>
- <a href="/">回到首页</a>
- </body>
- </html> 
- 
+</script>
