add login&user manage
not yet...

--- a/Templates/phone_info.html
+++ b/Templates/phone_info.html
@@ -29,9 +29,10 @@
   <label>型号：<input type="text" name="phonetype" /></label><br />
   <label>处理器：<input type="text" name="cpuinfo" /></label><br />
   <label>存储：<input type="text" name="ramandrominfo" /></label><br />
+  <input type="hidden" name="id" />
+
   <button id="saveBtn">完成</button>
 </form>
-
 
 <table id="myTable">
   <tr>
@@ -44,75 +45,80 @@
 </table>
 
 <script>
-    let data = [{{phones_json|safe}}];
+let data = [{{ phones_json | safe }}];
 
-    let table = document.getElementById("myTable");
+let table = document.getElementById("myTable");
 
-  for (let i = 0; i < data.length; i++) {
-    let row = document.createElement("tr");
-    let cell1 = document.createElement("td");
-    let cell2 = document.createElement("td");
-    let cell3 = document.createElement("td");
-    let cell4 = document.createElement("td");
-    let cell5 = document.createElement("td");
+for (let i = 0; i < data.length; i++) {
+let row = document.createElement("tr");
+let cell1 = document.createElement("td");
+let cell2 = document.createElement("td");
+let cell3 = document.createElement("td");
+let cell4 = document.createElement("td");
+let cell5 = document.createElement("td");
 
-    cell1.innerHTML = data[i].phonebrand;
-    cell2.innerHTML = data[i].phonetype;
-    cell3.innerHTML = data[i].cpuinfo;
-    cell4.innerHTML = data[i].ramandrominfo;
+cell1.innerHTML = data[i].phonebrand;
+cell2.innerHTML = data[i].phonetype;
+cell3.innerHTML = data[i].cpuinfo;
+cell4.innerHTML = data[i].ramandrominfo;
 
-    // create the edit and delete buttons
-    let editBtn = document.createElement("button");
-    editBtn.innerHTML = "修改";
-    editBtn.className = "btn";
-    editBtn.addEventListener("click", function() {
-        let form = document.getElementById("editForm");
-        form.style.display = "block";
-        form.phonebrand.value = data[i].phonebrand;
-        form.phonetype.value = data[i].phonetype;
-        form.cpuinfo.value = data[i].cpuinfo;
-        form.ramandrominfo.value = data[i].ramandrominfo;
-
-        let saveBtn = document.getElementById("saveBtn");
-        saveBtn.addEventListener("click", function() {
-        let form = document.getElementById("editForm");
-        let phonebrand = form.phonebrand.value;
-        let phonetype = form.phonetype.value;
-        let cpuinfo = form.cpuinfo.value;
-        let ramandrominfo = form.ramandrominfo.value;
-
-
-        // 发送 HTTP POST 请求到服务器
-        let xhr = new XMLHttpRequest();
-        xhr.open("POST", "/update_phone");
-        xhr.setRequestHeader("Content-Type", "application/x-www-form-urlencoded");
-        xhr.send(`phonebrand=${phonebrand}&phonetype=${phonetype}&cpuinfo=${cpuinfo}&ramandrominfo=${ramandrominfo}`);
-
-        // 隐藏表单
-        form.style.display = "none";
-});
+// create the edit and delete buttons
+let form = document.getElementById("editForm");
+form.addEventListener("submit", function(event) {
+  event.preventDefault();
 });
 
-    });
-
-
-    let deleteBtn = document.createElement("button");
-    deleteBtn.innerHTML = "删除";
-    deleteBtn.className = "btn";
-    deleteBtn.addEventListener("click", function() {
-  // 删除按钮的点击事件处理程序
+let editBtn = document.createElement("button");
+editBtn.innerHTML = "修改";
+editBtn.className = "btn";
+editBtn.addEventListener("click", function() {
+  form.style.display = "block";
+  form.phonebrand.value = data[i].phonebrand;
+  form.phonetype.value = data[i].phonetype;
+  form.cpuinfo.value = data[i].cpuinfo;
+  form.ramandrominfo.value = data[i].ramandrominfo;
+  form.id.value = data[i].id;
 });
 
-    // append the buttons to the cell
-    cell5.appendChild(editBtn);
-    cell5.appendChild(deleteBtn);
+let deleteBtn = document.createElement("button");
+deleteBtn.innerHTML = "删除";
+deleteBtn.className = "btn";
+deleteBtn.addEventListener("click", function() {
+    let xhr = new XMLHttpRequest();
+  xhr.open("POST", "/delete_phone");
+  xhr.setRequestHeader("Content-Type", "application/x-www-form-urlencoded");
+  xhr.send(`id=${data[i].id}`);
+});
 
-    row.appendChild(cell1);
-    row.appendChild(cell2);
-    row.appendChild(cell3);
-    row.appendChild(cell4);
-    row.appendChild(cell5);
+// append the buttons to the cell
+cell5.appendChild(editBtn);
+cell5.appendChild(deleteBtn);
 
-    table.appendChild(row);
-  }
+row.appendChild(cell1);
+row.appendChild(cell2);
+row.appendChild(cell3);
+row.appendChild(cell4);
+row.appendChild(cell5);
+
+table.appendChild(row);
+}
+
+let saveBtn = document.getElementById("saveBtn");
+saveBtn.addEventListener("click", function() {
+let form = document.getElementById("editForm");
+let phonebrand = form.phonebrand.value;
+let phonetype = form.phonetype.value;
+let cpuinfo = form.cpuinfo.value;
+let ramandrominfo = form.ramandrominfo.value;
+
+
+
+// 发送 HTTP POST 请求到服务器
+let xhr = new XMLHttpRequest();
+xhr.open("POST", "/update_phone");
+xhr.setRequestHeader("Content-Type", "application/x-www-form-urlencoded");
+xhr.send(`id=${form.id.value}&phonebrand=${phonebrand}&phonetype=${phonetype}&cpuinfo=${cpuinfo}&ramandrominfo=${ramandrominfo}`);
+// 隐藏表单
+form.style.display = "none";
+});
 </script>
