--- a/Templates/login-2.html
+++ b/Templates/login-2.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="../static/css/layui.css" media="all">
     <!--[if lt IE 9]>
     <script src="https://cdn.staticfile.org/html5shiv/r29/html5.min.js"></script>
-    <script src="https://cdn.staticfile.org/respond.js/1.4.2/respond.min.js"></script>
+    <script src="../static/js/modules/respond.min.js"></script>
     <![endif]-->
     <style>
         body {background-image:url("../static/image/bg.jpg");height:100%;width:100%;}
@@ -41,20 +41,20 @@
         <div class="admin-header">
             <span>login</span>
         </div>
-        <form class="layui-form" action="">
+        <form class="layui-form" action="/login" method="POST">
             <div>
                 <i class="layui-icon layui-icon-username admin-icon"></i>
                 <input type="text" name="username" placeholder="请输入用户名" autocomplete="off" class="layui-input admin-input admin-input-username" value="admin">
             </div>
             <div>
                 <i class="layui-icon layui-icon-password admin-icon"></i>
-                <input type="password" name="password" placeholder="请输入密码" autocomplete="off" class="layui-input admin-input" value="123456">
+                <input type="password" name="password" placeholder="请输入密码" autocomplete="off" class="layui-input admin-input">
             </div>
             <button class="layui-btn admin-button" lay-submit="" lay-filter="login">登 陆</button>
         </form>
     </div>
 </div>
-<script src="../lib/layui-v2.6.3/layui.js" charset="utf-8"></script>
+<script src="../static/js/layui.js" charset="utf-8"></script>
 <script>
     layui.use(['form'], function () {
         var form = layui.form,
@@ -64,21 +64,42 @@
         if (top.location != self.location) top.location = self.location;
 
         // 进行登录操作
-        form.on('submit(login)', function (data) {
-            data = data.field;
-            if (data.username == '') {
-                layer.msg('用户名不能为空');
-                return false;
-            }
-            if (data.password == '') {
-                layer.msg('密码不能为空');
-                return false;
-            }
-            layer.msg('登录成功', function () {
-                window.location = '../index.html';
-            });
-            return false;
-        });
+form.on('submit(login)', function (data) {
+    data = data.field;
+    if (data.username == '') {
+        layer.msg('用户名不能为空');
+        return false;
+    }
+    if (data.password == '') {
+        layer.msg('密码不能为空');
+        return false;
+    }
+$.ajax({
+  type: "POST",
+  url: "/login",
+  data: {username: data.username, password: data.password},
+  success: function(res){
+    // 解析响应结果
+      const obj = JSON.parse(res);
+      // 处理响应结果
+    if (obj.code == 0) {
+        layer.msg('登录成功');
+
+      // 登录成功，跳转到 phone_view.html
+      window.location.href = "phone_view.html";
+    } else {
+      // 登录失败，显示错误信息
+        layer.msg(obg.msg);
+    }
+  },
+  error: function(err){
+    // 处理错误信息
+    layer.msg("请求失败，请重试");
+  }
+});
+
+});
+
     });
 </script>
 </body>
