--- a/Templates/phone_view.html
+++ b/Templates/phone_view.html
@@ -9,9 +9,13 @@
 <body>
 <div>
     <header>
-        <hr/>
+        <hr>
         <h1>手机信息管理系统</h1>
+                <div class="avatar" id="avatar">
+  <img src="../static/image/avatar.png" alt="Avatar" onclick="showLogoutPopup()">
+</div>
         <hr/>
+
     </header>
     <main>
         <div>
