--- a/Templates/login.html
+++ b/Templates/login.html
@@ -40,7 +40,7 @@
     <div></div>
     <div class="admin-login-background">
         <div class="admin-header">
-            <span>login</span>
+            <span>登录</span>
         </div>
         <form class="layui-form" action="/login" method="POST">
             <div>
