--- a/Templates/phone_view.html
+++ b/Templates/phone_view.html
@@ -2,27 +2,47 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Student Information Management System</title>
+    <title>手机管理系统</title>
 
     <link rel="stylesheet" href="../static/css/phone_view.css">
+    <link href="../static/css/layui.css" rel="stylesheet">
     <script src="../static/js/jquery.min.js"></script>
+    <script src="../static/js/layer/layer.js"></script>
+
 
 </head>
 <body>
 <div>
     <header>
         <hr>
-        <h1>手机信息管理系统</h1>
-                <div class="avatar" id="avatar">
-  <img src="../static/image/avatar.png" alt="Avatar" onclick="showLogoutPopup()">
+        <ul class="layui-nav">
+            <li class="layui-nav-item">
+                <a href="#" onclick="event.preventDefault();">手机信息管理系统<span class="layui-badge-dot"></span></a>
+            </li>
+            <div class="right-align">
+                <li class="layui-nav-item" lay-unselect>
+                    <a href="javascript:;">
+                        <img src="../static/image/avatar.png" class="layui-nav-img">
+                    </a>
+                    <dl class="layui-nav-child">
+                        <dd style="text-align: center; font-size: 10px !important;"><a href="">退出登录</a></dd>
+                    </dl>
+                </li>
+            </div>
+        </ul>
+        <hr/>
+    </header>
 </div>
+<script src="//unpkg.com/layui@2.8.7/dist/layui.js"></script>
+
+               </ul>
         <hr/>
 
     </header>
     <main>
         <div>
-            <div id="divv">
-                <button class="add" id="add">新增</button>
+            <div id="adbt">
+                <button class="gre" id="add">新增</button>
             </div>
             <table>
                 <tbody>
@@ -42,12 +62,31 @@
             </table>
         </div>
     </main>
+    <button id="back-to-top">回到顶部</button>
+
+  <script>
+    $(document).ready(function() {
+      $(window).scroll(function() {
+        if ($(this).scrollTop() > 100) {
+          $('#back-to-top').fadeIn();
+        } else {
+          $('#back-to-top').fadeOut();
+        }
+      });
+
+      $('#back-to-top').click(function() {
+        $('html, body').animate({scrollTop : 0}, 800);
+        return false;
+      });
+    });
+  </script>
+
 </div>
 <div id="sbg"></div><!--增删改查时的阴影背景-->
 <div class="achaesi" id="asi">
 <!--    <form action="" method="post">-->
     <h2>新增学生信息</h2>
-    <div class="mod">A
+    <div class="mod">
         <div><label for="phonebrand">品牌</label> <input id="phonebrand" type="text" required="required" minlength="1" oninvalid="setCustomValidity('请输入11位的数字组合')"></div>
         <div><label for="phonetype">型号</label> <input id="phonetype" type="text" required="required" minlength="1" oninvalid="setCustomValidity('请输入正确的姓名')"></div>
         <div><label for="cpuinfo">处理器</label> <input id="cpuinfo" type="text" required="required" minlength="1" oninvalid="setCustomValidity('请输入正确的学院名')"></div>
