--- a/static/css/layui2.8.7.css
+++ b/static/css/layui2.8.7.css
@@ -2374,7 +2374,7 @@ a cite {
     white-space: nowrap;
     text-align: center;
     font-size: 14px;
-    border-radius: 2px;
+    border-radius: 3px;
     cursor: pointer;
     -moz-user-select: none;
     -webkit-user-select: none;
@@ -8381,7 +8381,11 @@ html #layuicss-layer {
     -webkit-animation-duration: .2s;
     animation-duration: .2s
 }
-
+.right-align {
+  position: absolute;
+  top: 0;
+  right: 50px;
+}
 @media screen and (max-width: 1100px) {
     .layui-layer-iframe {
         overflow-y: auto;
