--- a/static/css/phone_view.css
+++ b/static/css/phone_view.css
@@ -27,15 +27,24 @@ header hr {
 main #adbt {
   margin-left: 70px;
 }
-main button {
+mainbutton {
   margin: 20px 5px;
-  width: 85px;
-  height: 40px;
-  color: white;
-  border-radius: 30px;
-  cursor: pointer;
-  transition:0.2s;
-  border-style:none;
+    display: inline-block;
+    vertical-align: middle;
+    height: 40px;
+    line-height: 38px;
+    border: 1px solid transparent;
+    padding: 0 18px;
+    background-color: #16baaa;
+    color: #fff;
+    white-space: nowrap;
+    text-align: center;
+    font-size: 20px;
+    border-radius: 3px;
+    cursor: pointer;
+    -moz-user-select: none;
+    -webkit-user-select: none;
+    -ms-user-select: none
 }
 main button.gre {
   background-color: #5cb85c;
@@ -123,38 +132,41 @@ table tbody tr:not([id=thead]):hover {
   background-color: white;
 }
 buttonblue {
-  text-decoration: none;
-  color: white;
-  width: 30px;
-  height: 20px;
-  color: white;
-  border-radius: 30px;
-  cursor: pointer;
-  transition:0.2s;
-  border-style:none;
-  background-color: #409eff;
-  border-color: #409eff;
-  padding-top: 10px;
-  padding-right: 15px;
-  padding-bottom: 10px;
-  padding-left: 15px;
+    margin: 20px 5px;
+    display: inline-block;
+    vertical-align: middle;
+    height: 38px;
+    line-height: 38px;
+    border: 1px solid transparent;
+    padding: 0 18px;
+    background-color: #16baaa;
+    color: #fff;
+    white-space: nowrap;
+    text-align: center;
+    font-size: 14px;
+    border-radius: 3px;
+    cursor: pointer;
+    -moz-user-select: none;
+    -webkit-user-select: none;
+    -ms-user-select: none
 }
 buttonred {
-  text-decoration: none;
-  color: white;
-  width: 30px;
-  height: 20px;
-  color: white;
-  border-radius: 30px;
-  cursor: pointer;
-  transition:0.2s;
-  border-style:none;
-  background-color: red;
-  border-color: red;
-  padding-top: 10px;
-  padding-right: 15px;
-  padding-bottom: 10px;
-  padding-left: 15px;
+    display: inline-block;
+    vertical-align: middle;
+    height: 38px;
+    line-height: 38px;
+    border: 1px solid transparent;
+    padding: 0 18px;
+    background-color: #ff5722;
+    color: #fff;
+    white-space: nowrap;
+    text-align: center;
+    font-size: 14px;
+    border-radius: 2px;
+    cursor: pointer;
+    -moz-user-select: none;
+    -webkit-user-select: none;
+    -ms-user-select: none
 }
 #back-to-top {
   position: fixed;
