--- a/Templates/modify_phone.html
+++ b/Templates/modify_phone.html
@@ -85,6 +85,7 @@ layui.use(['form', 'laydate', 'util'], function(){
   // 提交事件
   form.on('submit(demo1)', function(data){
     var field = data.field; // 获取表单字段值
+      field.id = getUrlParameter("id")
     // 显示填写结果，仅作演示用
     layer.alert(JSON.stringify(field), {
       title: '当前填写的字段值'
@@ -92,10 +93,10 @@ layui.use(['form', 'laydate', 'util'], function(){
   // 使用ajax发送数据
   $.ajax({
     type: "POST",
-    url: "/update_phone",
-    data: field,
+    url: "/modify",
+    data:(field),
     success: function(response) {
-      // 成功时的处理
+        window.location.reload()
     },
     error: function() {
       // 失败时的处理
